force-app/main/default/objects/Speaker__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>This field contains Company of the speaker</description>
    <inlineHelpText>Provide Company of the speaker</inlineHelpText>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>