force-app/main/default/objects/Speaker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This field contains Phone of the Speaker</description>
    <inlineHelpText>Provide Phone of the speaker</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>