force-app/main/default/objects/Speaker__c/fields/Profile_Url__c.field-meta.xml
<CustomField>
    <fullName>Profile_Url__c</fullName>
    <label>Profile Url</label>
    <type>Url</type>
</CustomField>